# aigen-studio

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  todo
.envs/: template.env
.github/workflows/: python-tests.yaml
aigen/: config.py  gpt_chat_session.py  gpt_model.py  gpt_prompt.py  gpt_role.py  mock_gpt_chat_session.py  models.py  pipeline.py
aigen/core/: chat_history.py  chat_session.py  constants.py  file_handler.py  image_encoder.py  node.py  node_base.py  prompt.py  var_parser.py
aigen/gui/: deargui_gui.py  streamlit_gui.py  web_gui.py
aigen/nodes/: copy_variable_node.py  gpt_chat_node.py  print_variable_node.py  read_file_node.py  save_file_node.py  set_variable_node.py
cache/: input_1.txt  input_2.txt  input_text.txt  response.txt  response_1.txt  response_2.txt  response_file1.txt  response_file2.txt  response_mets_1.txt  response_mets_2.txt
cli/: article_generator.py  main.py
config/: example_pipeline.yaml
examples/article_generator/: articles.csv  example_html_template.html  example_instructions.yaml
examples/articles/: articles.csv
frontend/web/: package.json  (+1 more)
pipeline/: artcabbage_article_html_pipeline.yaml  example_pipeline.yaml  test_pipeline.yaml
pipeline-builder/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
server/: main.py
tests/: README.md  test_copy_variable_node.py  test_file_handler.py  test_gpt_chat_node.py  test_gpt_chat_session.py  test_gpt_prompt.py  test_models.py
(+108 files in other folders)
