[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigen-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.22.0",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "unit: fast deterministic tests with no network",
    "integration: tests that hit external services or real infrastructure",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
aigen-article-generator = "aigen.cli.article_generator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aigen"]
